working on module splitting